apps/prometheus/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "grafana"
  labels:
    application: "grafana"

spec:
  ingressClassName: nginx
  rules:
  - host: grafana.k8s.localhost
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
